--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,20 @@ Suggests:
     rmarkdown,
     dplyr,
     tidyr
+Config/Needs/website:
+    purrr,
+    ggplot2,
+    scales,
+    patchwork,
+    gt,
+    corrr,
+    lme4,
+    glmmTMB,
+    lavaan,
+    tidySEM,
+    survival,
+    broom,
+    broom.mixed
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
