--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,7 +36,9 @@ Config/Needs/website:
     tidySEM,
     survival,
     broom,
-    broom.mixed
+    broom.mixed,
+    modelbased,
+    performance
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
