--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,10 +40,12 @@ Config/Needs/website:
     performance,
     purrr,
     scales,
+    slider,
     stringr,
     survival,
     tidyr,
-    tidySEM
+    tidySEM,
+    vctrs
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
