set minimum versions for patchwork and purrr

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,9 +36,9 @@ Config/Needs/website:
     lme4,
     modelbased,
     muhaz,
-    patchwork,
+    patchwork (>= 1.2.0),
     performance,
-    purrr,
+    purrr (>= 1.0.0),
     scales,
     slider,
     stringr,
