--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Config/Needs/website:
     ggplot2,
     glmmTMB,
     gt,
+    katex (>= 1.4.1),
     lavaan,
     lme4,
     modelbased,
@@ -47,6 +48,8 @@ Config/Needs/website:
     tidyr,
     tidySEM,
     vctrs
+Remotes:  
+    rstudio/gt # Needed until CRAN release after v0.10.1.9000
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
