--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,7 @@ Config/Needs/website:
     tidySEM,
     vctrs
 Remotes:  
-    rstudio/gt # Needed until CRAN release after v0.10.1.9000
+    rstudio/gt
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
